--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -27,7 +27,7 @@ on early-init
     # Set the security context of /postinstall if present.
     restorecon /postinstall
 
-    start ueventd
+    #start ueventd
 
 on init
     sysclktz 0
