--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -708,3 +708,12 @@ service flash_recovery /system/bin/install-recovery.sh
 on property:persist.sys.recovery_update=true
     start flash_recovery
 
+# This trigger is run by our modified init after boot has finished
+on ready
+    class_start mer
+
+# Notify Mer's systemd that we're done
+# This is started at the end of boot after both core and main classes
+service droid_init_done /bin/sh /usr/bin/droid/droid-init-done.sh
+    class mer
+    oneshot
