(hybris) reach main init state
Change-Id: I471f48afaebf91c92f0d2a7bd3a24c5d1fa58ecd

--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -621,6 +621,7 @@ on boot
     class_start hal
 
     class_start core
+    class_start main
 
 # Never gets called, since Mer does its own 'mount_all'
 on nonencrypted
