(hybris) stop healthd from spamming logs
this also marginally increases battery life, funnily :)
Conflicts:
	rootdir/init.rc

Change-Id: I66c90b63cbb494ff5a1444a02bef5e900ad95e6d

--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -694,6 +694,8 @@ service healthd /system/bin/healthd
     class core
     critical
     group root system wakelock
+# Not used by Mer - spams logs and small battery drain
+    disabled
 
 service console /system/bin/sh
     class core
