(hybris) Disable setting hostname and domainname in init.rc.
Change-Id: I5b9f59e80760e53636763c89f8f76f350c17b3ec

--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -526,8 +526,9 @@ on zygote-start && property:ro.crypto.state=encrypted && property:ro.crypto.type
 on boot
     # basic network init
     ifup lo
-    hostname localhost
-    domainname localdomain
+# Conflicts with Mer
+    #hostname localhost
+    #domainname localdomain
 
     # Memory management.  Basic kernel parameters, and allow the high
     # level system server to be able to adjust the kernel OOM driver
