(hybris) Disable ueventd service
Change-Id: I8ee7b863a533f4a6ef7658ef1c1ef4bdb95d5d65

--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -690,6 +690,8 @@ service ueventd /sbin/ueventd
     class core
     critical
     seclabel u:r:ueventd:s0
+#Not used by Mer
+    disabled
 
 service healthd /system/bin/healthd
     class core
