(hybris) Properly handle shutdown from Mer.
Change-Id: I89daebb9559d38f3c639f4634c417252c7a92fe0

--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -732,3 +732,9 @@ on ready
 service droid_init_done /bin/sh /usr/bin/droid/droid-init-done.sh
     class mer
     oneshot
+
+# Properly handle shutdown from Mer
+on property:hybris.shutdown=*
+    class_stop late_start
+    class_stop main
+    class_stop core
